--- a/css/factura.css
+++ b/css/factura.css
@@ -70,3 +70,8 @@ color: #da981f;
 .invoice header h1{
 color: rgb(110, 110, 110);
 }
+
+.header span{
+    padding-right: 5px;
+    margin-right: 50px;
+}
