--- a/css/factura.css
+++ b/css/factura.css
@@ -9,7 +9,7 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.13);
-    margin: 50px 0px;
+    margin: 150px 0px;
    padding: 50px 30px 30px;
   }
 
@@ -63,8 +63,10 @@ figure{
 
 .num1{
 color: lightslategray;
+text-decoration: none;
 }
 .num2{
+  text-decoration: none;
 color: #da981f;
 }
 .invoice header h1{
