--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 /*============ Ventas ============*/
 .datos_cliente, .datos_venta, .title_page{
-	width: 100%;
-	max-width: 900px;
-	margin: auto;
+	width: 70%;
+
+	margin: 50px auto;
 	margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
 }
 #detalle_venta tr{
 	background-color: #FFF !important;
@@ -11,20 +12,64 @@
 #detalle_venta td{
 	border-bottom: 1px solid #CCC;
 }
+
+.btn_delete{
+  text-transform: uppercase;
+  padding: 5px;
+  margin-right: 2px;
+}
+
+.btn_ok{
+  text-transform: uppercase;
+  padding: 5px;
+}
+
+input[type=button]{
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #da981f;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+
+input[type=button]:hover{
+  background: #cc8f1d;
+}
+input[type=text], input[type=number], select{
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: white;
+  width: 100%;
+  border: 0;
+  border-radius: 5px;
+  margin: 2px 0 10px;
+  padding: 8px;
+  box-sizing: border-box;
+  font-size: 14px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+}
 .datos{
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  width: 700px;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
 	background-color: #e3ecef;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
+
 	display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     border: 2px solid #78909C;
     padding: 10px;
     border-radius: 10px;
-    margin-top: 10px;
+    
+    
 }
 .action_cliente{
 	display: -webkit-flex;
@@ -32,8 +77,9 @@
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
-	align-items: center;
+
 }
+
 
 .datos label{
 	margin: 5px auto;
@@ -55,6 +101,8 @@
 }
 .wd100{
 	width: 100%;
+  margin: 5px;
+  padding: 5px;
 }
 #div_registro_cliente, #add_product_venta{
 	display: none;
@@ -135,12 +183,7 @@ tr {
   text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
  
-tr:hover td {
-  background:#4E5066;
-  color:#FFFFFF;
-  border-top: 1px solid #22262e;
-}
- 
+
 tr:first-child {
   border-top:none;
 }
@@ -153,9 +196,6 @@ tr:nth-child(odd) td {
   background:#EBEBEB;
 }
  
-tr:nth-child(odd):hover td {
-  background:#4E5066;
-}
 
 tr:last-child td:first-child {
   border-bottom-left-radius:3px;
